[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zlx-ops-sdk"
version = "0.1.0"
description = "一行接入可观测的极小内部库:GlitchTip(Sentry 兼容)init fail-open + cron 死人开关。跨 50+ 自托管服务共用。"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "zlx" }]
license = { text = "MIT" }
dependencies = [
    "sentry-sdk>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/zj1123581321/zlx-ops-sdk"

[tool.setuptools.packages.find]
include = ["zlx_ops_sdk*"]

# PEP 561:py.typed 是非 .py 文件,setuptools 默认不收,必须显式声明,
# 否则源码树有它但 sdist/wheel 漏掉它,下游照样吃不到类型。
[tool.setuptools.package-data]
zlx_ops_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
